# proxiquery

./: .dockerignore  Dockerfile  README.md  README_ja.md  build.sh  publish.sh  pyproject.toml
promptia/: README.md  README_ja.md  README_spec.md  pyproject.toml
promptia/promptia/: __init__.py
promptia/promptia/core/: defines.py  manager.py
promptia/promptia/llm/: adapter.py  azure.py  bedrock.py  openai.py
promptia/promptia/retrievers/: base.py  vector_retriever.py
promptia/promptia/storages/: __init__.py  base.py  file_storage.py  memory_storage.py  s3_storage.py
promptia/tests/: test_readme.py
promptia/tests/core/: test_manager.py
promptia/tests/llm/: test_azure.py  test_bedrock.py  test_openai.py
promptia/tests/retrievers/: test_vector_retriever.py
promptia/tests/storages/: test_file_storage.py  test_memory_storage.py
server/: config.py  embed.py  main.py  vector.py
slack_bot/: .dockerignore  Dockerfile  README.md  build.sh
slack_bot/bot/: slack_bot.py
